# sentinel-siem

./: .gitignore  CMakeLists.txt
backend/: pyproject.toml
backend/sentinel/: __init__.py
backend/sentinel/api/: app.py
backend/sentinel/api/middleware/: auth.py
backend/sentinel/api/routes/: alerts.py  assets.py  dashboards.py  incidents.py  ingest.py  notables.py  search.py  threat_intel.py
backend/sentinel/correlation/: engine.py  rules.py  store.py
backend/sentinel/engine_client/: client.py
deploy/docker/: Dockerfile.backend  Dockerfile.engine  Dockerfile.frontend  docker-compose.yml  nginx.conf
engine/: CMakeLists.txt
engine/src/: main.cpp
engine/src/common/: config.cpp  config.h  logging.cpp  logging.h  metrics.cpp  metrics.h  thread_pool.cpp  thread_pool.h
engine/src/http/: server.cpp  server.h
engine/src/indexer/: bloom_filter.cpp  bloom_filter.h  compaction.cpp  compaction.h  inverted_index.cpp  inverted_index.h  segment.cpp  segment.h  wal.cpp  wal.h
engine/src/ingest/: file_monitor.cpp  file_monitor.h  line_breaker.cpp  line_breaker.h  pipeline.cpp  pipeline.h  syslog_receiver.cpp  syslog_receiver.h  timestamp_extractor.cpp  timestamp_extractor.h
engine/src/search/: aggregator.cpp  aggregator.h  executor.cpp  executor.h  filter.cpp  filter.h  result_set.cpp  result_set.h
engine/src/spl/: ast.cpp  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  semantic.cpp  semantic.h
engine/src/storage/: block_store.cpp  block_store.h  compression.cpp  compression.h  mmap_reader.cpp  mmap_reader.h
engine/tests/unit/: test_bloom_filter.cpp  test_compression.cpp  test_inverted_index.cpp  test_segment.cpp  test_spl_lexer.cpp  test_spl_parser.cpp  test_timestamp_extractor.cpp  test_wal.cpp
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: AssetCenter.tsx  IncidentReview.tsx  RiskAnalysis.tsx  Search.tsx  SecurityPosture.tsx  Settings.tsx  ThreatIntelligence.tsx
proto/: common.proto  indexer.proto  ingest.proto  search.proto
scripts/: generate-proto.sh  setup-dev.sh  test-ingest.sh
